--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,15 @@
+before_install:
+  #- sudo apt-get update
+  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+  - sudo apt-get update
+  - sudo apt-get -y install gcc-4.9
+  - sudo apt-get -y install g++-4.9
+  #- sudo apt-get upgrade libstdc++6
+  - sudo apt-get install unzip
+  - wget https://s3-ap-southeast-1.amazonaws.com/infer/infer-linux64-v0.15.0.zip 
+  - sudo unzip infer-linux64-v0.15.0.zip -d /opt/ 
+  - sudo ln -s "/opt/infer-linux64-v0.15.0/bin/infer" /usr/local/bin/infer
+
 language: cpp
 
 matrix:
